--- a/src/components/MyStack.astro
+++ b/src/components/MyStack.astro
@@ -2,14 +2,27 @@
 import Card from "./Card/index.astro";
 ---
 
-<Card colSpan="md:col-span-2" rowSpan="md:row-span-1" title="My Stack">
-  <p class="text-sm font-light">
-    Here's a snapshot of the primary tools and technologies I work with:
+<Card colSpan="md:col-span-2" rowSpan="md:row-span-5" title="Expériences pro">
+  <p class="text-sm font-bold">
+  Formateur Scripting Unix IB Formation
   </p>
   <ul class="text-sm font-light pl-5 list-disc">
-    <li ><strong>Solidjs</strong></li>
-    <li><strong>JavaScript</strong></li>
-    <li><strong>Node.js</strong></li>
-    <li><strong>React.js</strong></li>
+    <li ><strong>Formateur Bash, Python, Awk. <a href="https://boulejaune.github.io/scripting-unix/" style="color: red" target="_blank">Cours open sourcé</a> </strong></li>
   </ul>
+  <p class="text-sm font-bold">
+Expert Hypervision Enedis
+  </p>
+  <ul class="text-sm font-light pl-5 list-disc">
+<li ><strong>Assistance aux projets de convergeance des outils d’hypervision</strong></li>
+<li ><strong>Gestion de la MCO de l’infrastructure d’hypervision assurée par le moyen Truesight BM</strong></li>
+<li ><strong>Software et supervision par Centreon</strong></li>
+<li ><strong>Gestion des évolutions et des intégrations de ces infrastructures</strong></li>
+<li ><strong>Support, expertise et assistance technique sur les infrastructures de supervision et Hypervision</strong></li>
+  </ul>
+  <p class="text-sm font-bold">
+  Stage en intelligence artificielle et DevOps à Picsellia
+  </p>
+  <ul class="text-sm font-light pl-5 list-disc">
+<li ><strong>Création d’un outil de training de model de computer vision avec active learning</strong></li>
+<li ><strong>Mise en place d’un cluster Kubernetes GPGPU avec déploiement de cet outil dessus</strong></li>
 </Card>
