--- a/src/components/Now.astro
+++ b/src/components/Now.astro
@@ -1,17 +1,16 @@
 ---
 import Card from "./Card/index.astro";
 import Pulse from "./Pulse.astro";
+import PulseOff from "./Pulse-off.astro";
 ---
 
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-2">
   <div class="flex justify-between w-full items-start mb-2">
     <div class="flex flex-col">
       <h2>Now</h2>
-      <a href="https://sive.rs/nowff" target="_blank">
-        <span class="text-xs text-gray-500 cursor-pointer">what's that ?</span>
-      </a>
     </div>
-    <Pulse />
+    <PulseOff />
   </div>
-  <p class="text-xs">Currently working as freelancer</p>
+  <p class="text-xs">Actuellement en mission pour Enedis via Capgemini.</p>
+  <p class="text-xs">Trois mois de préavis.</p>
 </Card>
