--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,8 +20,8 @@ const posts = (await getCollection("blog"))?.sort(
 </script>
 
 <Layout
-  title="Gianmarco Cavallo - Blog"
-  description="Software developer with strong focus on the user experience animations and micro interactions"
+  title="Thierry Amettler"
+  description="Hey, je suis un ingénieur DevOps / SysOps spécialisé sur les infrastructures d'outillage passionné d'open source."
 >
   <main
     class="w-screen h-screen flex flex-col justify-start items-start max-w-3xl mx-auto p-8"
