--- a/src/components/Now.astro
+++ b/src/components/Now.astro
@@ -11,6 +11,6 @@ import PulseOff from "./Pulse-off.astro";
     </div>
     <PulseOff />
   </div>
-  <p class="text-xs">Actuellement en mission pour Enedis via Capgemini.</p>
-  <p class="text-xs">Trois mois de préavis.</p>
+  <p class="text-s">Actuellement en mission pour Enedis via Capgemini.</p>
+  <p class="text-s">Trois mois de préavis.</p>
 </Card>
