--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -3,11 +3,11 @@ import Card from "./Card/index.astro";
 import Image from "../content/photo.jpg";
 ---
 
-<Card colSpan="md:col-span-3" rowSpan="md:row-span-4">
+<Card colSpan="md:col-span-2" rowSpan="md:row-span-3">
   <div class="flex w-full h-full">
     <div class="flex flex-col justify-between md:max-h-[300px] gap-4">
       <div class="flex flex-col h-full">
-        <h6 class="text-sm font-light m-0 text-gray-500">Bienvenus</h6>
+        <h6 class="text-sm font-light m-0 text-gray-500">Bienvenue</h6>
         <p class="m-0 font-light text-xl">
         Hey, je suis <b class="font-bold">Thierry Amettler</b>, un ingénieur DevOps / SysOps spécialisé sur les infrastructures d'outillage passionné d'open source.
         </p>
