--- a/src/components/MyStack.astro
+++ b/src/components/MyStack.astro
@@ -2,27 +2,19 @@
 import Card from "./Card/index.astro";
 ---
 
-<Card colSpan="md:col-span-2" rowSpan="md:row-span-5" title="Expériences pro">
-  <p class="text-sm font-bold">
-  Formateur Scripting Unix IB Formation
-  </p>
-  <ul class="text-sm font-light pl-5 list-disc">
-    <li ><strong>Formateur Bash, Python, Awk. <a href="https://boulejaune.github.io/scripting-unix/" style="color: red" target="_blank">Cours open sourcé</a> </strong></li>
-  </ul>
-  <p class="text-sm font-bold">
-Expert Hypervision Enedis
-  </p>
-  <ul class="text-sm font-light pl-5 list-disc">
-<li ><strong>Assistance aux projets de convergeance des outils d’hypervision</strong></li>
-<li ><strong>Gestion de la MCO de l’infrastructure d’hypervision assurée par le moyen Truesight BM</strong></li>
-<li ><strong>Software et supervision par Centreon</strong></li>
-<li ><strong>Gestion des évolutions et des intégrations de ces infrastructures</strong></li>
-<li ><strong>Support, expertise et assistance technique sur les infrastructures de supervision et Hypervision</strong></li>
-  </ul>
-  <p class="text-sm font-bold">
-  Stage en intelligence artificielle et DevOps à Picsellia
-  </p>
-  <ul class="text-sm font-light pl-5 list-disc">
-<li ><strong>Création d’un outil de training de model de computer vision avec active learning</strong></li>
-<li ><strong>Mise en place d’un cluster Kubernetes GPGPU avec déploiement de cet outil dessus</strong></li>
+<Card colSpan="md:col-span-1" rowSpan="md:row-span-3" title="Stack technique">
+  <div class="flex flex-col gap-2">
+    <div class="text-sm font-light">
+      <ul class="list-disc list-inside">
+        <li>Docker</li>
+        <li>Linux</li>
+        <li>Python</li>
+        <li>Centreon/Truesight</li>
+        <li>Gitlab CI/CD</li>
+        <li>Ansible</li>
+        <li>Kubernetes</li>
+        <li>NixOS</li>
+      </ul>
+    </div>
+  </div>
 </Card>
