--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,10 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card/index.astro";
 import IntroCard from "../components/IntroCard.astro";
 import ContactsCard from "../components/ContactsCard.astro";
+import ExperiencesPro from "../components/ExperiencesPro.astro";
 import MyStack from "../components/MyStack.astro";
-import AboutMe from "../components/AboutMe.astro";
 import Now from "../components/Now.astro";
-import Globe from "../components/Globe";
+import Projects from "../components/Projects.astro";
 ---
 
 <script>
@@ -36,20 +36,13 @@ import Globe from "../components/Globe";
   description="Hey, je suis Thierry Amettler, un ingénieur DevOps / SysOps spécialisé sur les infrastructures d'outillage passionné d'open source."
 >
   <main
-    class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-2 md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
+    class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-3  md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-4 lg:gap-4 lg:max-h-[800px]"
   >
     <IntroCard />
-    <AboutMe />
-    <ContactsCard />
+    <Projects />
+    <ExperiencesPro />
     <MyStack />
-    <!-- <TimeZone /> -->
-    <Now />
-    <!-- <Card -->
-    <!--   colSpan="md:col-span-1" -->
-    <!--   rowSpan="md:row-span-2 flex gap-4" -->
-    <!--   title="Blog" -->
-    <!--   href="/blog" -->
-    <!-- /> -->
+    <ContactsCard />
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <p class="text-xs">
         © 2024 · Crafted with bento-portfolio using <a
@@ -59,5 +52,24 @@ import Globe from "../components/Globe";
         >. 
       </p>
     </Card>
+    <Now />
   </main>
 </Layout>
+
+<!-- <Layout> -->
+<!--   <main -->
+<!--     class="text-white m-auto p-2 grid gap-2 max-w-6xl overflow-hidden relative w-full sm:p-4 sm:gap-2 md:grid-cols-1  md:gap-3 md:p-6 lg:h-screen lg:grid-rows-8 lg:grid-cols-2 lg:gap-4 lg:max-h-[800px]" -->
+<!--   > -->
+<!--     <ExperiencesPro /> -->
+<!--     <Projects /> -->
+<!--     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1"> -->
+<!--       <p class="text-xs"> -->
+<!--         © 2024 · Crafted with bento-portfolio using <a -->
+<!--           href="https://astro.build/" -->
+<!--           target="_blank" -->
+<!--           class="text-red-500">Astro</a -->
+<!--         >.  -->
+<!--       </p> -->
+<!--     </Card> -->
+<!--   </main> -->
+<!-- </Layout> -->
