--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -9,7 +9,7 @@ import Image from "../content/photo.jpg";
       <div class="flex flex-col h-full">
         <h6 class="text-sm font-light m-0 text-gray-500">Bienvenue</h6>
         <p class="m-0 font-light text-xl">
-        Hey, je suis <b class="font-bold">Thierry Amettler</b>, un ingénieur DevOps / SysOps spécialisé sur les infrastructures d'outillage passionné d'open source.
+        Hey, je suis <b class="font-bold">Thierry Amettler</b>, un ingénieur DevOps / SysOps spécialisé sur les infrastructures d'outillage, passionné de culture open source.
         </p>
       </div>
     </div>
