--- a/src/components/ExperiencesPro.astro
+++ b/src/components/ExperiencesPro.astro
@@ -13,7 +13,7 @@ import Card from "./Card/index.astro";
   Expert Hypervision, Enedis - 3 ans
   </p>
   <ul class="text-sm font-light pl-5 list-disc">
-    <li ><strong>Assistance aux projets de convergeance des outils d’hypervision</strong></li>
+    <li ><strong>Assistance aux projets de convergence des outils d’hypervision</strong></li>
     <li ><strong>Environnement 25k serveurs, 90% Linux</strong></li>
     <li ><strong>Build, run, dev et automatisation d'infra de supervision et hypervision</strong></li>
     <li ><strong>Run (astreintes) sur toutes les infras d'outillage</strong></li>
