--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -9,7 +9,7 @@ import { LINKS } from "../lib/constants";
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-white text-xl font-bold">
-        Travaillons ensembles !
+        Travaillons ensemble !
       </h1>
     </header>
     <!-- <address class="flex flex-col mt-4"> -->
