--- a/src/components/MyStack.astro
+++ b/src/components/MyStack.astro
@@ -13,6 +13,7 @@ import Card from "./Card/index.astro";
         <li>Gitlab CI/CD</li>
         <li>Ansible</li>
         <li>Kubernetes</li>
+        <li>Java</li>
         <li>NixOS</li>
       </ul>
     </div>
